# tchap-sample-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: docker-publish.yml  tests.yml
scripts/: adminbot.py  command.py  rssfeed.py  startbot.py  util.py  validatebot.py  validator.py
scripts/commands/: get_hour.py  get_rss.py  reset_password.py
scripts/validators/: confirm.py  totp.py
tests/: __init__.py
tests/commands/: test_reset_password.py
